--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,17 @@ html,body {
 
 body {
 	background:
+    background-repeat: no-repeat;
+    background-image: url(img/bg-1.png);
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    visibility: inherit;
+    z-index: 20;
 }
+
 header{
 	height:70px;
 	margin: 1px 1px 1px 1px;
@@ -23,8 +33,8 @@ header{
 	font-weight: bold;
 	text-decoration: none;
 	font-size: 26px;
-	text-shadow: 0 1px 0 white;
 	color: #373e47;
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
 }
 
 nav {
@@ -41,12 +51,12 @@ nav li a {
 	font-weight: bold;
 	text-decoration: none;
 	padding: 0 30px;
-	color: #143567;
-	text-shadow: 0 1px 0 white;
+	color: gray;
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
 }
 
 nav li a:hover {
-	color: #a45f93;
+	color: white;
 }
 
 main {
@@ -60,7 +70,7 @@ text-align: center;
 	padding: 30px;
 }
 
-#service {
+#features {
 	border-top-style: solid;
 	line-height: 1.5;
 	padding: 30px;
