--- a/styles.css
+++ b/styles.css
@@ -4,119 +4,82 @@ src: url(font/HelveticaNowDisplayXBlk.otf);
 
 }
 
+:root {
+    font-family: Arial, Helvetica, sans-serif;
+    --main-color: black;
+    --accent-color: blanchedalmond;
+    color: var(--main-color);
+    scroll-behavior: smooth;
+}
+
 h1, h2, h3, p {
 	margin: 0;
 	padding: 0;
 }
 
-:root {
-    font-family: Arial, Helvetica, sans-serif;
-    scroll-behavior: smooth;
-    
-}
-
-@media (min-width: 500px)
-header nav {
-    display: flex;
-    align-items: center;
-}
-
 html,body {
 	width: 100%;
 	height: 100%;
-    display: block;
 }
 
 body {
     background: url(img/bg-1.png);
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-    visibility: inherit;
-    z-index: 20;
     max-width: 1140px;
     margin: auto;
 }
 
-header{
-	height:70px;
-	padding: 10px 0px 0px 0px;
-    display: block;
-}
-
-
-
-#logo a {
+#logo {
 	font-weight: bold;
 	text-decoration: none;
-	font-size: 26px;
+    font-size: 2rem;
     color: blanchedalmond;
-    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
     text-align: center;
 }
 
-#logo :hover {
-    color: #4873f2;
-
+#logo a {
+	text-decoration: none;
 }
 
-nav {
-	overflow: hidden;
-	float: right;
-    display: flex;
+#logo :hover {
+    color: #4873f2;
 }
 
 header nav .top-menu {
     display: flex;
     justify-content: space-around;
     list-style: none;
-    padding: 0;
-    color: blanchedalmond;
-
-nav li a {
-	font-size: 20px;
-	font-weight: bold;
-	text-decoration: none;
-    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    padding: 0px;
 }
 
-nav li a:hover {
-	color: #4873f2;
+header nav .top-menu li a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: blanchedalmond;
+    padding: 5px;
+    border: 1px solid transparent;
+}
+
+header nav .top-menu li a:hover {
+    border: 1px solid;
+    color:#4873f2;
+}
+
+@media (min-width: 500px) {
+    header nav {
+        display: flex;
+        align-items: center;
     }
 
-header .banner {
-
+    header .top-menu {
+        flex: 1;
+    }
 }
 
-.button {
-padding-left: 100px;
-}
-
-main {
-text-align: center;
-}
-
-#home {
-
-}
-
-#features {
-
-}
-
-#faq {
-
-}
-
-#contact {
-
-}
 
 #main-watch img
 {
-    padding-left: 50px;
+    padding-left: 25px;
 }
