add border to nav

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ header nav .top-menu li a {
     text-transform: uppercase;
     color: blanchedalmond;
     border: 1px solid transparent;
+    padding: 5px;
 
 }
 
