--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 @font-face{
-font-family: Arial, Helvetica, sans-serif;
-src: url(font/HelveticaNowDisplayXBlk.otf);
+font-family: 'HelveticaNow';
+font-weight: normal;
+src: url(font/HelveticaNow.otf);
 
 }
 
 :root {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: HelveticaNow;
     --main-color: black;
     --accent-color: blanchedalmond;
     color: var(--main-color);
@@ -32,8 +33,8 @@ body {
 #logo {
 	font-weight: bold;
 	text-decoration: none;
-    font-size: 2rem;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 21px;
+    font-family: HelveticaNow;
     text-transform: uppercase;
     text-align: center;
 }
@@ -73,6 +74,7 @@ header nav .top-menu li a:hover {
     header nav {
         display: flex;
         align-items: center;
+        
     }
 
     header .top-menu {
@@ -81,7 +83,12 @@ header nav .top-menu li a:hover {
 }
 
 
-#main-watch img
+.main-watch
 {
-    padding-left: 25px;
+    width: 25%;
+}
+
+#features {
+background: linear-gradient(50deg,#0d1338 0%,#d5235b 0%,#cd2861 0%,#0099ff 92%) !important;
+    
 }
