--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
-@font-face{
-font-family: 'HelveticaNow';
-font-weight: normal;
-src: url(font/HelveticaNow.otf);
-
+@font-face {
+    font-family: 'HelveticaNow';
+    font-weight: normal;
+    src: url(font/HelveticaNow.otf);
 }
 
 :root {
@@ -14,25 +13,24 @@ src: url(font/HelveticaNow.otf);
 }
 
 h1, h2, h3, p {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
-html,body {
-	width: 100%;
-	height: 100%;
+html, body {
+    width: 100%;
+    height: 100%;
 }
 
 body {
     background: url(img/bg-1.png);
     background-repeat: no-repeat;
-    max-width: 1140px;
     margin: auto;
 }
 
 #logo {
-	font-weight: bold;
-	text-decoration: none;
+    font-weight: bold;
+    text-decoration: none;
     font-size: 21px;
     font-family: HelveticaNow;
     text-transform: uppercase;
@@ -40,7 +38,7 @@ body {
 }
 
 #logo a {
-	text-decoration: none;
+    text-decoration: none;
     color: blanchedalmond;
 }
 
@@ -62,33 +60,27 @@ header nav .top-menu li a {
     color: blanchedalmond;
     border: 1px solid transparent;
     padding: 5px;
-
 }
 
 header nav .top-menu li a:hover {
     border: 1px solid;
-    color:#4873f2;
+    color: #4873f2;
 }
 
 @media (min-width: 600px) {
     header nav {
         display: flex;
         align-items: center;
-        
     }
-
     header .top-menu {
         flex: 1;
     }
 }
 
-
-.main-watch
-{
+.main-watch {
     width: 25%;
 }
 
 #features {
-background: linear-gradient(50deg,#0d1338 0%,#d5235b 0%,#cd2861 0%,#0099ff 92%) !important;
-    
+    background: linear-gradient(50deg, #0d1338 0%, #d5235b 0%, #cd2861 0%, #0099ff 92%) !important;
 }
